<resources>
    <string name="app_name">Social Scheduler</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="login_with_instagram">Login</string>
    <string name="login_header">Instagram Login</string>
    <string name="twitter_login_header">Twitter Login</string>
    <string name="social_scheduler">Social Scheduler</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="pick_time">Pick Time</string>
    <string name="plus">+</string>
    <string name="load_picture">Load Picture</string>
    <string name="developed_with">Made with 💛</string>
    <string name="login_with">Login with:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>
    <string name="share_crash_reports">Share crash reports</string>
    <string name="notification_after_sending">Notification after sending</string>
    <string name="instagram_login">Instagram Login</string>

</resources>
