<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#B388FF"
    android:orientation="vertical">


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:backgroundTint="#03A9F4"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#191970"
        android:textSize="30sp"
        android:textStyle="normal"
        android:layout_gravity="center"
/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#1A237E"
        android:fontFamily="@font/allerta"
        android:text="@string/login_with"
        android:textAlignment="center"
        android:textColor="#1A237E"
        android:textSize="24sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/instagram_button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="#00BCD4"
        android:backgroundTint="#03A9F4"
        android:fontFamily="@font/allerta"
        android:text="@string/instagram"
        android:layout_gravity="center"
/>

    <Button
        android:id="@+id/twitter_button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="#00BCD4"
        android:backgroundTint="#03A9F4"
        android:fontFamily="@font/allerta"
        android:text="@string/twitter"
        android:layout_gravity="center"
 />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#03A9F4"
        android:fontFamily="@font/allerta"
        android:text="@string/developed_with"
        android:textSize="18sp"
        android:gravity="bottom"
        android:layout_weight="1"
        />

</LinearLayout>