<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#B388FF"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B388FF"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:text="@string/title_activity_settings"
            android:textColor="#191970"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            />

        <Switch
            android:id="@+id/switch_instagram"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:fontFamily="@font/allerta"
            android:text="@string/instagram" />

        <Switch
            android:id="@+id/switch_twitter"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/allerta"
            android:text="@string/twitter" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/allerta"
            android:layout_marginBottom="10dp"
            android:text="@string/share_crash_reports"
            android:checked="true" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/allerta"
            android:text="@string/notification_after_sending"
            android:layout_gravity="center"/>



    </LinearLayout>

</LinearLayout>